--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Application météo">
     <link rel="stylesheet" href="index_style.css">
+    <link rel="icon" type="image/png" href="icon/png-icon-sun2.png">
         
     <title>Application météo</title>
 </head>
 <body>
     <header>
         <ul id="suggestions">
-            <a id="s1"><li></li></a>
-            <a id="s2"><li></li></a>
-            <a id="s3"><li></li></a>
-            <a id="s4"><li></li></a>
-            <a id="s5"><li></li></a>
-            <a id="s6"><li></li></a>
-            <a id="s7"><li></li></a>
-            <a id="s8"><li></li></a>
-            <a id="s9"><li></li></a>
+            <a id="s1" href="#" onclick="suggestionsChoice()"><li id="value1">Nantes</li></a>
+            <a id="s2" href="#" onclick="suggestionsChoice()"><li id="value2">Marseilles</li></a>
+            <a id="s3" href="#" onclick="suggestionsChoice()"><li id="value3">Paris</li></a>
+            <a id="s4" href="#" onclick="suggestionsChoice()"><li id="value4">Strasbourg</li></a>
+            <a id="s5" href="#" onclick="suggestionsChoice()"><li id="value5">Brest</li></a>
+            <a id="s6" href="#" onclick="suggestionsChoice()"><li id="value6">Lyon</li></a>
+            <a id="s7" href="#" onclick="suggestionsChoice()"><li id="value7">Cherbourg-en-Cotentin</li></a>
+            <a id="s8" href="#" onclick="suggestionsChoice()"><li id="value8">Saint-Laurent-des-Autels</li></a>
         </ul>
         <h1 id="ville"></h1>
         <form>
@@ -28,7 +28,7 @@
             <button onclick="choiceCity()" name="submit" value="Rechercher la ville" class="button">Rechercher</button>
         </form>
     </header>
-    <main>
+    <main id="main">
         <div class="container">
             <ul class="container_weather">
                 <li id="li1"></li>
