--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
             <ul class="container_weather">
                 <h3><i id="AB" class="fas fa-star"></i> Votre liste personnalisée <i id="AB" class="fas fa-star"></i></h3> 
                 <div class="favContainer">
-                    <a href="#" onclick="fav1Weather()"><li id="fav1"></li></a> <p>-</p> <a href="#" onclick="deleteFav1()"><i id="TM" class="fas fa-times"></i></a>
+                    <a href="#" onclick="fav1Weather()" title="Charger la ville"><li id="fav1"></li></a> <p>-</p> <a href="#" onclick="deleteFav1()" title="Supprimer la ville des favoris"><i id="TM" class="fas fa-times"></i></a>
                 </div>
                 <div class="favContainer">
-                    <a href="#" onclick="fav2Weather()"><li id="fav2"></li></a> <p>-</p> <a href="#" onclick="deleteFav2()"><i id="TM" class="fas fa-times"></i></a>
+                    <a href="#" onclick="fav2Weather()" title="Charger la ville"><li id="fav2"></li></a> <p>-</p> <a href="#" onclick="deleteFav2()" title="Supprimer la ville des favoris"><i id="TM" class="fas fa-times"></i></a>
                 </div>
             </ul>
         </div>
