--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a id="s8" href="#" onclick="saintL()"><li id="value8">Saint-Laurent-des-Autels</li></a>
             </ul>
             <div>
-                <button onclick="modeAffichage()" type="submit" name="mode" id="mode" title="Go dark"><span id="darkText">Go Light </span><i class="fas fa-sun"></i></button>
+                <button onclick="modeAffichage()" type="submit" name="mode" id="mode" title="Go dark"><span id="darkText">Mode clair </span><i class="fas fa-sun"></i></button>
             </div>
         </div>
         <div id="search">
@@ -95,6 +95,8 @@
     <footer>
         <div id="position">
             <p id="position_texte"></p>
+            <a href="https://openweathermap.org/current" title="Data infos" target="_blank" class="dataInfos">D'où proviennent les données météo ?</a>
+            <a href="mailto:bodineaudavidpro@gmail.com" title="Mail de contact" class="dataInfos">Suggérer des modifications</a>
         </div>
     </footer>
     <script type="text/javascript" src="script.js"></script>
