--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a id="s5" href="#" onclick="brest()"><li id="value5">Brest</li></a>
                 <a id="s6" href="#" onclick="lyon()"><li id="value6">Lyon</li></a>
                 <a id="s7" href="#" onclick="cherbourg()"><li id="value7">Cherbourg-en-Cotentin</li></a>
-                <a id="s8" href="#" onclick="saintL()"><li id="value8">Saint-Laurent-des-Autels</li></a>
+                <a id="s8" href="#" onclick="saintL()"><li id="value8">Lille</li></a>
             </ul>
             <div>
                 <button onclick="modeAffichage()" type="submit" name="mode" id="mode" title="Go dark"><span id="darkText">Mode clair </span><i class="fas fa-sun"></i></button>
@@ -96,7 +96,8 @@
         <div id="position">
             <p id="position_texte"></p>
             <a href="https://openweathermap.org/current" title="Data infos" target="_blank" class="dataInfos">D'où proviennent les données météo ?</a>
-            <a href="mailto:bodineaudavidpro@gmail.com" title="Mail de contact" class="dataInfos">Suggérer des modifications</a>
+            <a href="https://fontawesome.com/" title="Intégration d'icons gratuit" target="_blank" class="dataInfos">Icons utilisé sur l'application</a>
+            <a href="mailto:bodineaudavidpro@gmail.com" title="Mail de contact" class="dataInfos">Bugs, Suggestions ?</a>
         </div>
     </footer>
     <script type="text/javascript" src="script.js"></script>
