--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
         <div>
             <h1 id="ville"></h1>
             <div id="typeOfCloud">
-                <i id="1" class="fas fa-cloud-showers-heavy"></i>
-                <i id="2" class="fas fa-cloud-sun-rain"></i>
-                <i id="2bis" class="fas fa-smog"></i>
-                <i id="3" class="fas fa-cloud"></i>
-                <i id="4" class="fas fa-cloud-sun"></i>
-                <i id="5" class="fas fa-sun"></i>
+                <i id="bolt" title="Orage" class="fas fa-bolt"></i>
+                <i id="0" title="Neige" class="far fa-snowflake"></i>
+                <i id="1" title="Pluie" class="fas fa-cloud-showers-heavy"></i>
+                <i id="2" title="Averses" class="fas fa-cloud-sun-rain"></i>
+                <i id="2bis" title="Brouillard" class="fas fa-smog"></i>
+                <i id="3" title="Nuageux" class="fas fa-cloud"></i>
+                <i id="4" title="Eclaircies" class="fas fa-cloud-sun"></i>
+                <i id="5" title="Soleil" class="fas fa-sun"></i>
             </div>
         </div>
     </header>
@@ -102,7 +104,7 @@
     </footer>
     <script type="text/javascript" src="script.js"></script>
     <script type="text/javascript" src="suggestions.js"></script>
-    <script type="text/javascript" src="/Js/gps_coordonnees.js"></script>
-    <script type="text/javascript" src="/Js/modeAffichage.js"></script>
+    <script type="text/javascript" src="gps_coordonnees.js"></script>
+    <script type="text/javascript" src="modeAffichage.js"></script>
 </body>
 </html>
