--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
         <div class="container">
             <ul class="container_weather" id="bc2">
                 <li id="li2"></li>
+                <div class="divProgress">
+                    <p class="progressTemp"><i class="fas fa-temperature-low"></i></p>
+                    <progress id="progress3" class="progressGeneral" title="Température (de -15°C à 50°C)" class="progressTemp" max="65" value=""></progress>
+                    <p class="progressTemp"><i class="fas fa-temperature-high"></i></p>
+                </div>
                 <li id="li4"></li>
                 <li id="li3"></li>
             </ul>
