--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <div id="formSearchSpan">
                     <input onkeyUp="fonctionRecupDataGeo()" onChange="fonctionRecupDataGeo()" type="text" name="choice_city" placeholder="Ville à rechercher" id="choice" maxlength="25" minlength="2" autocomplete="off">
                     <span id="cityGeo" onclick="injectionInput()"></span>
+                    <span id="cityGeo2" onclick="injectionInput2()"></span>
                 </div>
                 <button onclick="choiceCity()" name="submit" value="Rechercher la ville" class="buttonP btn" id="buttonSearch"><span id="suggestionsGeo">Rechercher <i class="fas fa-search"></i></span></button>
             </form>
