--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <a href="https://fontawesome.com/" title="Intégration d'icons gratuit" target="_blank" class="dataInfos">Icons utilisé sur l'application</a>
             <a href="mailto:bodineaudavidpro@gmail.com" title="Mail de contact" class="dataInfos">Bugs, Suggestions ?</a>
         </div>
-        <p id="version">Version 18.2</p>
+        <p id="version">Version Août 2021</p>
     </footer>
     <script type="text/javascript" src="script.js"></script>
     <script type="text/javascript" src="suggestions.js"></script>
