--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div id="search">
             <form id="formSearch">
                 <div id="formSearchSpan">
-                    <input onkeyUp="fonctionRecupDataGeo()" onChange="fonctionRecupDataGeo()" type="text" name="choice_city" placeholder="Ville à rechercher" id="choice" maxlength="25" minlength="1" autocomplete="off">
+                    <input onkeyup="verif()" type="text" name="choice_city" placeholder="Ville à rechercher" id="choice" maxlength="25" autocomplete="off">
                     <span id="cityGeo" onclick="injectionInput()"></span>
                     <span id="cityGeo2" onclick="injectionInput2()"></span>
                 </div>
