--- a/previsions.html
+++ b/previsions.html
@@ -31,7 +31,7 @@
         </div>
         <div id="search">
             <form id="formSearch">
-                <input type="text" name="choice_city" value="Paris" id="choice">
+                <!-- <input type="text" name="choice_city" value="Paris" id="choice"> -->  
                 <button onclick="choiceCity()" name="submit" value="Rechercher la ville" class="buttonP btn"><span>Rechercher <i class="fas fa-search"></i></span></button>
             </form>
             <button onclick="gpsVerif()" name="gpsCoords" value="Météo par GPS" class="buttonP btn" id="GPS"><span>Localiser ma position <i class="fas fa-search-location"></i></span></button>
